[package]
name = "anmaya_agro_mqtt_client"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = {version="0.4.38",features=["serde"]}
config = "0.14.0"
mongodb = "3.0.0"
rumqttc = "0.24.0"
serde={version="1.0",features=["derive"]}
serde_json = "1.0.120"
tokio={version="1",features=["full"]}

